Added commands thread